@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: pkgc.c,v 1.6 2007/05/02 21:28:09 dkf Exp $
+ * RCS: @(#) $Id: pkgc.c,v 1.6.2.1 2007/05/30 03:31:31 dgp Exp $
  */
 #include "tcl.h"
 
